Update CI badge to show combined results from all platforms and fix badge colors to blue theme

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <a class="btn ghost" href="#quickstart">Get Started</a>
           </div>
           <div class="badges" aria-label="Project badges">
-            <a href="https://github.com/pacorreia/export-gmail-attachments-to-nas/actions/workflows/ci.yml">
-              <img alt="CI" src="https://github.com/pacorreia/export-gmail-attachments-to-nas/actions/workflows/ci.yml/badge.svg" />
+            <a href="https://github.com/pacorreia/export-gmail-attachments-to-nas/actions/workflows/ci.yml" title="CI/CD Status (Windows + Linux, Python 3.12 & 3.13)">
+              <img alt="CI (Windows + Linux)" src="https://github.com/pacorreia/export-gmail-attachments-to-nas/actions/workflows/ci.yml/badge.svg" />
             </a>
             <img alt="Code Coverage" src="https://img.shields.io/badge/Code%20Coverage-98%25-success?style=flat" />
-            <img alt="License" src="https://img.shields.io/github/license/pacorreia/export-gmail-attachments-to-nas?color=2f4b3a" />
-            <img alt="Last Commit" src="https://img.shields.io/github/last-commit/pacorreia/export-gmail-attachments-to-nas?color=2f4b3a" />
-            <img alt="Issues" src="https://img.shields.io/github/issues/pacorreia/export-gmail-attachments-to-nas?color=2f4b3a" />
+            <img alt="License" src="https://img.shields.io/github/license/pacorreia/export-gmail-attachments-to-nas?color=2563eb" />
+            <img alt="Last Commit" src="https://img.shields.io/github/last-commit/pacorreia/export-gmail-attachments-to-nas?color=2563eb" />
+            <img alt="Issues" src="https://img.shields.io/github/issues/pacorreia/export-gmail-attachments-to-nas?color=2563eb" />
             <a class="badge-link" href="https://pypi.org/project/export-gmail-attachments-to-nas/">PyPI</a>
           </div>
         </div>
